# MP-term-analyses

./: .gitattributes  .gitignore  README.md  actual.py  calculate_output_er.py  check.csv  convert_datasets.py  document_classifier.py  falseneg.csv  falsepos.csv  integration.py  mbner.py  mbner_run.py  mini.py  modtest.py  mp_ner_train.py  ocr_correction.py  preprocess.py  pyproject.toml  requirements.txt  run_classification.py  run_identification.py  run_mpmod.py  temporary.py  test.py  testing.pkl  testing2.pkl
_archive/: run_ner.py  test.py
_archive/mp_model/: README.md  _mpmod.py  _utils.py
_archive/mp_model_train/: _mpmod_dev.py  _utils.py  ground_truth_connector.py
_archive/ocr_correction/: ocr_correction_test.py
mp_model/: _mpmod.py
mp_model/_seed_terms/: scaling-ai.csv
mp_model/classification/: __init__.py  _tars_based.py
mp_model/evaluation/: __init__.py  _metrics.py
mp_model/identification/: _term_recog.py  _word_vecs.py
mp_model/preprocess/: _creating_corpus.py  _sentence_parsing.py
mp_model_train/: _mpmod_dev.py  ground_truth_connector.py
mpterm/: __init__.py  _mpterm.py  _utils.py
mpterm/data/: __init__.py  _load_tools.py  _save_tools.py
mpterm/entity_recognizer/: __init__.py  _filter_er.py  _run_model.py
mpterm/processing/: __init__.py  _cleanup.py  _tokenization.py  cleanup.py
mpterm/tars_classifier/: __init__.py  _class_dc.py  _run_model.py
ocr_correction/: README.md
seed_terms/: mapping_prejudice.csv
utils/_classification/: _tars_based.py  tars_training.py
utils/_evaluation/: _display.py  _metrics.py
(+21 files in other folders)
